compiler/testData/cli/jvm/optIn/optInEmptyMessage.out
compiler/testData/cli/jvm/optIn/optInEmptyMessage.kt:8:5: error: this declaration requires opt-in to be used. The usage must be annotated with '@EmptyMarker' or '@OptIn(EmptyMarker::class)'
    foo()
    ^^^
COMPILATION_ERROR
